tests/errors/error_display/test_hll_defer_use_after_move.si

        struct Box: Copy + Drop { val: i64 }
        fn f(b: Box, out: &out Box) {
            defer out.* = b;
            let c = b;
        }
    