tests/errors/error_display/test_hll_defer_use_after_move.err.expected
error: at 4:19: [INIT-UseAfterMove] In function 'f': variable 'b' is used after move
   |
 4 |             defer out.* = b;
   |                   ^^^^^^^^^
